Extended Map to hold 12 Challenges, Fixed hints text overflow, Error message to show error when get hint fails

--- a/css/map.css
+++ b/css/map.css
@@ -584,7 +584,11 @@ body{
     color: white;
 }
 
-.modal-body {padding: 2px 16px 30px 16px;}
+.modal-body {
+	padding: 2px 16px 30px 16px;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	}
 
 .modal-footer {
     padding: 2px 16px;
